# Demo

./: .gitignore  README.md  pyproject.toml
demo_app/: server.py
demo_app/static/: index.html
