[project]
name = "qwarm-rl"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.0,<3",
    "torch>=2.4,<3",
    "torch-geometric>=2.6,<3",
    "pydantic>=2.9,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwarm"]
